# tfm

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: data_building.py  evaluation_and_metrics.py  model.py
src/utils/: eda_utils.py  general_utils.py
