[project]
name = "tfm"
version = "0.1.0"
description = ""
authors = [
    {name = "lbrusca",email = "lbruscaesparza@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.8.0,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ecbdata (>=0.1.1,<0.2.0)",
    "xgboost (>=3.0.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

